2004-08-10  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (main): set the umask for
	--makefile-install-mode	so we always install the
	schemas with the correct permissions. bug #145041.

2004-08-07  Danilo Šegan  <dsegan@gmx.net>

	Fixes bug #149518.
	
	* gconf/gconftool.c (options): s/dir/directory/ s/standard out/standard output/.
	* gconf/gconfd.c (main): s/fd/file descriptor/.
	* gconf/gconf-sources.c (gconf_sources_new_from_addresses): s/config/configuration/.
	* backends/markup-tree.c (parse_value_element): s/car_type/first-element/.

2004-08-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.91.

==================== 2.7.90 ====================

2004-08-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.90.

2004-08-03  Mark McLoughlin  <mark@skynet.ie>

	Patch from Carlos Daniel Ruvalcaba Valenzuela <clsdaniel@yahoo.com.mx>
	in bug #148973.

	* gconf/gconf-internals.[ch]: (gconf_escape_percents): remove unused
	(and internal) function.

2004-07-09  Mark McLoughlin  <mark@skynet.ie>

	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
	bug #120349.

	* doc/gconf/gconf.sgml,
	  doc/gconf/tmpl/gconf-client.sgml,
	  doc/gconf/tmpl/gconf.sgml,
	  doc/intro-article.sgml,
	  gconf/gconf-client.h,
	  gconf/gconf-listeners.h: bring the docs up to
	date with the patch that we're using GObject instead
	of GtkObject.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.4.

==================== 2.7.3.1 ====================

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.3.1.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (process_key_list): one character
	fix to make the schema actually be applied.

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* gconf/default.path.in: Removed outdated comment.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (do_makefile_uninstall): merge with