@@ -240,7 +240,7 @@ AC_CHECK_FUNCS(usleep)
 
 AC_CHECK_FUNCS(flockfile)
 
-ALL_LINGUAS="am ar az be bg bn ca cs cy da de el en_CA en_GB es eu fa fi fr ga gl gu hi hr hu id it ja ko lt lv mk ml mn ms ne nl nn no pa pl pt pt_BR ro ru sk sl sq sr sr@Latn sv tr uk vi yi zh_CN zh_TW ta"
+ALL_LINGUAS="am ar az be bg bn ca cs cy da de el en_CA en_GB es eu fa fi fr ga gl gu hi hr hu id it ja ko lt lv mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru sk sl sq sr sr@Latn sv ta tr uk vi yi zh_CN zh_TW"
 
 AM_GLIB_GNU_GETTEXT
 
